k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-gitops
      version: v1
  template:
    metadata:
      labels:
        app: hello-gitops
        version: v1
    spec:
      containers:
        - image: hello-gitops
          name: hello-gitops
          ports:
            - name: http
              containerPort: 8050
          livenessProbe:
            httpGet:
              path: /live
              port: probe
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: probe
            periodSeconds: 5
