k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: hello-gitops
    version: v1
  type: ClusterIP
